--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,5 @@
 .page-header {
   height: 100vh;
-  background: #000;
-
 }
 
 .menu {
@@ -21,6 +19,7 @@
   background: #fff;
   box-shadow: 0 0 5px 0 rgba(0,0,0,.2);
   padding: 13px 40px 17px 12px;
+  z-index: 2;
 
   .hamburger {
     // padding-top: 5px;
@@ -74,7 +73,7 @@
   top:0;
   left: 0;
   background: rgba(0,0,0,.5);
-  z-index: 1;
+  z-index: 3;
   transition: .5s;
 
   .btn-nav-close{
